--- a/Demo.Languages2/Demo.Languages2.TypeScriptTest01/index.html
+++ b/Demo.Languages2/Demo.Languages2.TypeScriptTest01/index.html
@@ -2,14 +2,24 @@
 
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>TypeScript HTML App</title>
-    <link rel="stylesheet" href="app.css" type="text/css" />
-    <script src="app.js"></script>
+	<meta charset="utf-8" />
+	<title>TypeScript HTML App</title>
+
+	<link href="Content/toastr.min.css" rel="stylesheet" />
+	<link rel="stylesheet" href="app.css" type="text/css" />
+
+	<script src="Scripts/jquery-2.1.4.js"></script>
+	<script src="Scripts/bootstrap.js"></script>
+	<script src="Scripts/angular.js"></script>
+	<script src="Scripts/angular-route.js"></script>
+	<script src="Scripts/toastr.js"></script>
+
+
+	<script src="app.js"></script>
 </head>
 <body>
-    <h1>TypeScript HTML App</h1>
+	<h1>TypeScript HTML App</h1>
 
-    <div id="content"></div>
+	<div id="content"></div>
 </body>
 </html>
