--- a/Demo.Languages2/Demo.Languages2.TypeScriptTest01/index.html
+++ b/Demo.Languages2/Demo.Languages2.TypeScriptTest01/index.html
@@ -15,6 +15,7 @@
 	<script src="Scripts/toastr.js"></script>
 
 
+	<script src="Scripts/BestCommonType.js"></script>
 	<script src="app.js"></script>
 </head>
 <body>
