--- a/Demo.Languages2/Demo.Languages2.TypeScriptTest01/index.html
+++ b/Demo.Languages2/Demo.Languages2.TypeScriptTest01/index.html
@@ -14,7 +14,7 @@
 	<script src="Scripts/angular-route.js"></script>
 	<script src="Scripts/toastr.js"></script>
 
-
+	<script src="Scripts/Polymorphism.js"></script>
 	<script src="Scripts/BestCommonType.js"></script>
 	<script src="app.js"></script>
 </head>
