tested TypeScript scope. It's also a function scope.

--- a/Demo.Languages2/Demo.Languages2.TypeScriptTest01/index.html
+++ b/Demo.Languages2/Demo.Languages2.TypeScriptTest01/index.html
@@ -18,6 +18,7 @@
 		-->
 
 	<script src="Scripts/require.js" data-main="Scripts/app2-main.js"></script>
+	<!--<script src="ts/scopeTest.js"></script>-->
 </head>
 <body>
 	<h1>TypeScript HTML App</h1>
