--- a/Demo.Languages2/Demo.Languages2.TypeScriptTest01/index.html
+++ b/Demo.Languages2/Demo.Languages2.TypeScriptTest01/index.html
@@ -23,5 +23,18 @@
 <body>
 	<h1>TypeScript HTML App</h1>
 	<div id="content"></div>
+
+	<div>
+		Clicking on different parts of this document logs appropriate messages.
+		<blockquote>
+			<p>
+				Any fool can write code that a computer can understand.
+				Good programmers write code that humans can understand.
+			</p>
+			<footer>
+				-Martin Fowler
+			</footer>
+		</blockquote>
+	</div>
 </body>
 </html>
