--- a/Demo.Languages2/Demo.Languages2.ReactJS/hello-react.html
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/hello-react.html
@@ -6,6 +6,7 @@
 	<script src="https://fb.me/react-0.14.7.js"></script>
 	<script src="https://fb.me/react-dom-0.14.7.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+	<script src="Scripts/moment.min.js"></script>
 	<script src="Scripts/jsx/hello-react.jsx"></script>
 	
 </head>
